	- added option to increase or decrease the level of compensation for each degree of freedom separately
	- modify mc effect with tracker and/or hmd as point of reference 
	
	Keyboard input
	- added modifier key(s) for faster in-game filter and cor position modification
	- added	`NONE` key to deactivate shortcut
	
	MmfReader
	- added ability to write values to csv file
	
	Miscellaneous
	- simplified/improved handling of in-game recenter events
	- added config option to enable debug level logging
	- added support for X-Plane 12
	- modified mc application technique to avoid glitching at XR_ERROR_TIME_INVALID on calling xrLocateSpace
	- increased default tolerance for eye/pose reconstruction cache to 500ms (only when installing without previous default config file present)
	
	Known issues
	- compensation of motion controller pose does not work properly in MSFS main menu (controller movement gets blocked)
	- graphical overlay conflicts:
		- does not properly work with OpenXR Toolkit v1.3.2 (black screen instead of game, bug already reported to mbucchia)
		- iRacing displays marker only in left eye

Version 0.2.7
	
	Virtual tracker
	- enabled use of a motion controller to manipulate cor position
	- OpenComposite: added separate set of cor position values to be saved and loaded:
	  to continue to use saved cor position after update, reset for games using OC is required (either in game or copy/paste in config file(s))
	- SRS/Witmotion sensor: inverted pitch axis to match OVRMC:
	  Use inversion switch within motion compensation menu of SRS to match new behavior
	- added rotational offset (yaw) for cor positioning (applied after positioning)
	- added upside_down = 1 automatically on config file creation for iRacing

	Installer
	- fixed removal of prexisting oxrmc registry keys sharing path prefix
	
	Bugfixes
	- fixed ctd in DCS when loading mission with mc activated
	- fixed ctd in MSFS at startup without hmd / active runtime present