@@ -33,8 +33,8 @@ offset_forward = 0.0
 offset_down = 0.0
 offset_right = 0.0
 offset_yaw_angle = 0.0
-; load saved cor instead of recalibration with headset + offset
-use_cor_pos = 0
+; load saved cor pose instead of recalibration with headset + offset
+load_ref_pose_from_file = 0
 ; overlay marker size (in cm)
 marker_size = 10.0
 ; use values from yaw vr game engine for cor offset 
